--- a/index.html
+++ b/index.html
@@ -300,5 +300,6 @@
         <a href="#" class="small">Согласие на обработку персональных данных</a>
       </div>
     </section>
+    <div></div>
   </body>
 </html>
