--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
       <a href="#" class="btnimg"><img src="./img/btnbtn.png" alt="" /></a>
       <span>Доставка газа всегда по актуальным ценам</span>
     </section>
+
+
+
+
+
     <section class="grey">
       <h2>Стоимость газа в ваш газгольдер сегодня</h2>
-      <div class="fuelInfo_Grid_container">
+      <div class="fuelInfo_mainFlex_container">
         <div class="fuelInfo_container first">
           <h3>Пропан</h3>
           <span>от 25 рублей за литр</span>
@@ -76,7 +81,6 @@
           </p>
           <div class="btn"><a href="#">Заказать</a></div>
         </div>
-
         <div class="fuelInfo_container center">
           <h4>Идеальное соотношение</h4>
           <div class="fuelInfo_flexcontainer">
@@ -101,6 +105,12 @@
         </div>
       </div>
     </section>
+
+
+
+
+
+
     <section class="padding_left">
       <h3>Преимущества работы с нашей компанией</h3>
       <div class="flexGallery_container">
@@ -175,6 +185,11 @@
         </div>
       </div>
     </section>
+
+
+
+
+    
     <section class="black">
       <h3 class="v_title">Выберите свой объём Газовоза</h3>
       <div class="btn_flex_container">
@@ -243,6 +258,11 @@
         <div class="question">Смогу ли я заказать во время праздников?</div>
       </div>
     </section>
+
+
+
+
+
     <section>
       <div class="question_flexContainer">
         <div class="question_form">
@@ -264,12 +284,12 @@
       </div>
       </div>
       <div class="fuel_galleryContainer">
-        <img src="./img/роснефть 1.png" alt="" class="fuel_galleryBlock">
-        <img src="./img/image 3.png" alt="" class="fuel_galleryBlock">
-        <img src="./img/транснефть 1.png" alt="" class="fuel_galleryBlock">
-        <img src="./img/Frame (1).svg" alt="" class="fuel_galleryBlock">
-        <img src="./img/Frame (2).svg" alt="" class="fuel_galleryBlock">
-        <img src="./img/image 4.png" alt="" class="fuel_galleryBlock">
+        <div class="f_block"><img src="./img/роснефть 1.png" alt="" class="fuel_galleryBlock"></div>
+        <div class="f_block"><img src="./img/image 3.png" alt="" class="fuel_galleryBlock"></div>
+        <div class="f_block"><img src="./img/транснефть 1.png" alt="" class="fuel_galleryBlock"></div>
+        <div class="f_block"><img src="./img/Frame (1).svg" alt="" class="fuel_galleryBlock"></div>
+        <div class="f_block"><img src="./img/Frame (2).svg" alt="" class="fuel_galleryBlock"></div>
+        <div class="f_block"><img src="./img/image 4.png" alt="" class="fuel_galleryBlock"></div>
       </div>
       <h3 class="blue">Закажи прямо сейчас и получи<br>
         бесплатную установку телеметрии</h3>
@@ -300,8 +320,5 @@
         <a href="#" class="small">Согласие на обработку персональных данных</a>
       </div>
     </section>
-
-
-    
   </body>
 </html>
